add ckeditor access

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,13 @@
 
 en:
   hello: "Hello world"
+  ckeditor:
+    page_title: "CKEditor Files Manager"
+    confirm_delete: "Delete file?"
+    buttons:
+      cancel: "Cancel"
+      upload: "Upload"
+      delete: "Delete"
   views:
     pagination:
       previous: "&lt; Назад"
